--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "user-directory",
-  "homepage": "https://dbolding12.github.io/userdirectory.github.io",
+  "homepage": "https://dbolding12.github.io/userdirectory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build",
+    "predeploy":"npm run build"
   },
   "eslintConfig": {
     "extends": [
